log
Thu 14 Sep 2023 01:58:30 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  3|8
total_score: 0/70
23433ac
Thu 14 Sep 2023 01:58:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a452375
Thu 14 Sep 2023 02:07:03 PM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
fcbcc63
Thu 14 Sep 2023 02:07:53 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
f8ba319
Thu 14 Sep 2023 02:21:02 PM UTC: 
 treemap.c | 37 +++++++++++++++++++++++++++++++++++++
 1 file changed, 37 insertions(+)
 tests:  6|7
total_score: 5/70
4082953
Thu 14 Sep 2023 02:21:18 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
656bbcc
Thu 14 Sep 2023 02:21:37 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
5a8dd12
Thu 14 Sep 2023 02:21:50 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
a854035
Thu 14 Sep 2023 02:23:52 PM UTC: 
 treemap.c | 39 +++++++++++++++++----------------------
 1 file changed, 17 insertions(+), 22 deletions(-)
 tests:  6|7
total_score: 5/70
ec40c01
Thu 14 Sep 2023 02:27:25 PM UTC: 
 treemap.c | 50 +++++++++++++++++++++++++++-----------------------
 1 file changed, 27 insertions(+), 23 deletions(-)
 tests:  6|7
total_score: 5/70
e00de67
Thu 14 Sep 2023 02:29:05 PM UTC: 
 treemap.c | 49 +++++++++++++++++++++++--------------------------
 1 file changed, 23 insertions(+), 26 deletions(-)
 tests:  6|7
total_score: 5/70
3371eaa
Thu 14 Sep 2023 02:29:40 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
b9ff807
Thu 14 Sep 2023 02:30:19 PM UTC: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:85:16: error: ‘cmp’ undeclared (first use in this function); did you mean ‘bcmp’?
   85 |     } else if (cmp < 0) {
      |                ^~~
      |                bcmp
treemap.c:85:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
a3829a9
Thu 14 Sep 2023 02:30:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
6094fb6
Thu 14 Sep 2023 02:31:32 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
7560b32
Thu 14 Sep 2023 02:31:48 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
75b3393
Thu 14 Sep 2023 02:32:04 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
73e124c
Thu 14 Sep 2023 02:33:35 PM UTC: 
 treemap.c | 33 ++++++---------------------------
 1 file changed, 6 insertions(+), 27 deletions(-)
 tests:  5|7
total_score: 5/70
9d9b8f6
Thu 14 Sep 2023 02:34:34 PM UTC: 
 treemap.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   57 |     TreeNode* parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e7b6222
Thu 14 Sep 2023 02:41:29 PM UTC: 
 treemap.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
 tests:  6|7
total_score: 5/70
22902ad
Thu 14 Sep 2023 02:42:44 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
5a03852
Thu 14 Sep 2023 02:46:33 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
3bd0957
Thu 14 Sep 2023 02:47:41 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
6ef5ecb
Thu 14 Sep 2023 02:50:23 PM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
2c368fc
Thu 14 Sep 2023 02:52:20 PM UTC: 
 treemap.c | 42 +++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 41 insertions(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
22be95b
Thu 14 Sep 2023 02:53:57 PM UTC: 
 treemap.c | 24 ++++++++++++++----------
 1 file changed, 14 insertions(+), 10 deletions(-)
 tests:  8|6
total_score: 5/70
f495c4d
Thu 14 Sep 2023 03:02:34 PM UTC: 
 treemap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  8|6
total_score: 5/70
ccb53e3
Thu 14 Sep 2023 03:03:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
82c75fb
Thu 14 Sep 2023 03:03:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
e11ac3b
Thu 14 Sep 2023 03:05:39 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|6
total_score: 5/70
a14b012
Thu 14 Sep 2023 03:08:24 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
51ba651
Thu 14 Sep 2023 03:08:40 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  8|6
total_score: 5/70
2a29643
Thu 14 Sep 2023 03:08:51 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
7bd5cbd
Thu 14 Sep 2023 03:11:22 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|6
total_score: 5/70
9c6624b
Thu 14 Sep 2023 03:13:43 PM UTC: 
 treemap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  15|4
total_score: 25/70
529d875
Thu 14 Sep 2023 03:16:46 PM UTC: 
 treemap.c | 29 ++++++++++++++++++++++++++++-
 1 file changed, 28 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
ddcdb6e
Thu 14 Sep 2023 03:18:54 PM UTC: 
 treemap.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  15|4
total_score: 25/70
676b96e
Thu 14 Sep 2023 03:20:27 PM UTC: 
 treemap.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
 tests:  15|4
total_score: 25/70
efbe293
